--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_fonts: ^6.2.1
   get_storage: ^2.1.1
   pinput: ^5.0.0
+  midtrans_sdk: ^0.4.0
 
 dev_dependencies:
   flutter_test:
